--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,45 @@ node_modules/@types/node/ts3.5/wasi.d.ts
 node_modules/@types/node/ts3.7/assert.d.ts
 node_modules/@types/node/ts3.7/base.d.ts
 node_modules/@types/node/ts3.7/index.d.ts
+Database/_mdb_catalog.wt
+Database/collection-0--227398544877528689.wt
+Database/collection-4--227398544877528689.wt
+Database/collection-2--227398544877528689.wt
+Database/index-1--227398544877528689.wt
+Database/index-3--227398544877528689.wt
+Database/index-5--227398544877528689.wt
+Database/index-6--227398544877528689.wt
+Database/mongod.lock
+Database/sizeStorer.wt
+Database/storage.bson
+Database/WiredTiger
+Database/WiredTiger.lock
+Database/WiredTiger.turtle
+Database/WiredTiger.wt
+Database/WiredTigerLAS.wt
+Database/diagnostic.data/metrics.2020-05-31T12-34-15Z-00000
+Database/journal/WiredTigerLog.0000000001
+Database/journal/WiredTigerPreplog.0000000001
+Database/journal/WiredTigerPreplog.0000000001
+Database/journal/WiredTigerPreplog.0000000002
+MongoDB/Server/4.2/LICENSE-Community.txt
+MongoDB/Server/4.2/MPL-2
+MongoDB/Server/4.2/README
+MongoDB/Server/4.2/THIRD-PARTY-NOTICES
+MongoDB/Server/4.2/THIRD-PARTY-NOTICES.gotools
+MongoDB/Server/4.2/bin/bsondump.exe
+MongoDB/Server/4.2/bin/InstallCompass.ps1
+MongoDB/Server/4.2/bin/mongo.exe
+MongoDB/Server/4.2/bin/mongod.cfg
+MongoDB/Server/4.2/bin/mongod.exe
+MongoDB/Server/4.2/bin/mongod.pdb
+MongoDB/Server/4.2/bin/mongodump.exe
+MongoDB/Server/4.2/bin/mongodump.exe
+MongoDB/Server/4.2/bin/mongoexport.exe
+MongoDB/Server/4.2/bin/mongofiles.exe
+MongoDB/Server/4.2/bin/mongoimport.exe
+MongoDB/Server/4.2/bin/mongorestore.exe
+MongoDB/Server/4.2/bin/mongos.exe
+MongoDB/Server/4.2/bin/mongos.pdb
+MongoDB/Server/4.2/bin/mongostat.exe
+MongoDB/Server/4.2/bin/mongotop.exe
