--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node Abschlussarbeit/Code/Server/Server.js"
+    "start": "node Abschlussarbeit/Code/Server/Server.js remote"
   },
   "repository": {
     "type": "git",
